--- a/src/main/resources/templates/getBoardList.html
+++ b/src/main/resources/templates/getBoardList.html
@@ -24,6 +24,8 @@
 <body>
 <div style="text-align: center;">
     <h1>게시판 목록</h1>
+    <h3><font color="red" th:text="${session['member'].name}"></font>님 환영합니다. </h3>
+    <a th:href="@{/logout}">LOGOUT</a>
     <table style="width: 700px; margin: auto">
         <tr>
             <th style="width: 10%">번호</th>
